--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -55,7 +55,7 @@
 
 .typewriter {
   /* color:black; */
-  color: black;
+  color: orange;
 }
 
 .hero_info {
@@ -111,8 +111,8 @@
 }
 
 .slider {
-  padding: 60px 0;
   white-space: nowrap;
+  background: linear-gradient(#4137cf, #0f0f0f);
 }
 
 .slider:before,
@@ -137,12 +137,11 @@
 
 .services {
   text-align: center;
-  padding-bottom: 5rem;
+  padding: 10rem;
 }
 
 .services div {
-  margin: 15px;
-  line-height:35px;
+  line-height: 100px;
 }
 
 .service_title {
@@ -151,7 +150,6 @@
   align-content: center;
   justify-content: center;
   flex-direction: row;
-  margin: 0;
 }
 
 .services h2 {
@@ -166,87 +164,61 @@
   padding-right: 0.5rem;
 }
 
+.background_text {
+  color: transparent;
+  font-family: 'Chillax-Semibold';
+  font-size: 100px;
+  align-items: center;
+  justify-content: center;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+
+  background-image: url(../app/assets/pattern1.PNG);
+  background-size: 1000%;
+}
+
+.background_text {
+    animation: bg-animation 100s cubic-bezier(0.3,0,0.7,1) infinite;
+}
+  
+@keyframes bg-animation {
+    0% {background-position: 0% 0%;}
+    50% {background-position: 100% 100%;}
+    100% {background-position: 0% 0%;}
+}
+
 .experiences {
-  padding: 5rem;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
+  padding: 4rem;
+  padding-top: 12rem;
+  padding-bottom: 12rem;
 }
 
 .experiences h1{
-  font-size: 48px;
+  font-size: 35px;
+  padding: 0.5rem;
+  font-family: 'Chillax-Extralight' !important;
 }
 
-.grid {
+.resume_item_holder {
+  font-size: 20px;
+  margin: 1rem;
+}
+
+.illustrations .top{
+  padding: 1rem;
+  font-family: 'Chillax-Extralight' !important;
   display: flex;
-  justify-content: right;
-  gap: 20px;
-  flex-direction: column;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: 65%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .cv {
-  padding: 2rem;
   justify-content: center;
   align-items: center;
   text-align: center;
   text-decoration-line: underline;
-}
-
-.card {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  text-align: center;
-  align-items: center;
-  background-color: #191a1d;
-  padding: 2rem;
-  border-radius: 25px !important;
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-  height: 100px;
-}
-
-.card h2 {
-  font-weight: 500;
-  font-size: 1.3rem;
-}
-
-.experience_holder {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  align-items: center;
-  gap: 0.5rem;
-  width: 30%;
-}
-
-.experience_holder Image{
-  flex-grow: 1;
-}
-
-.experience_holder h2{
-  flex-grow: 2;
-}
-
-.experience_info {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  text-align: center;
-  align-items: center;
-  gap: 3rem;
-  width: 70%;
-}
-
-.experience_date {
-  flex-grow: 1;
-}
-
-.experience_role {
-  flex-grow: 50;
+  font-size: 2rem;
 }
 
 .gradiant_transition {
@@ -260,10 +232,10 @@
 }
 
 .projects {
-  height: 1000px;
+  height: auto;
   width: auto;
-  padding-top: 8rem;
-  background-color: #3A2EE2;
+  padding-top: 4rem;
+  padding-bottom: 10rem;
   box-sizing: border-box;
 }
 
@@ -278,7 +250,7 @@
 }
 
 .item_grid div {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .item_grid {
@@ -293,7 +265,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .project_a {
@@ -302,6 +274,7 @@
   grid-column: 1 / 3;
   grid-row: 1;
   display: flex;
+  color: black;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -312,12 +285,14 @@
   grid-column: 2 / 4;
   grid-row: 3;
   display: flex;
+  color: black;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.project_a .project_description, .project_d .project_description{
+.project_description {
   display: flex;
+  flex-direction: row;
   gap: 60px;
 }
 
@@ -325,18 +300,21 @@
   padding-bottom: 15px;
 }
 
-.project_a .project_utils, .project_d .project_utils {
+.project_utils {
   display: flex;
   gap: 10px;
   justify-content: space-between;
 }
 
-.project_a .project_technologies, .project_d .project_technologies {
+.project_technologies {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 10px;
+  width: 70%;
 }
 
-.project_a .project_technologies p, .project_d .project_technologies p {
+.project_technologies p {
   border-radius: 20px;
   background-color: rgba(255, 255, 255);
   color: black;
@@ -344,12 +322,12 @@
   padding-right: 0.7rem;
 }
 
-.project_a .project_links, .project_d .project_links {
+.project_links{
   border-radius: 10px;
-  background-color: rgb(126, 216, 103);
+  background-color: rgb(76, 159, 255);
   color: black;
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
+  width: auto;
+  height: 40px;
 }
 
 .project_b {
@@ -371,46 +349,14 @@
   justify-content: space-between;
 }
 
-.project_b .project_description, .project_c .project_description{
-  display: flex;
-  flex-direction: row;
-  gap: 60px;
-}
-
 .project_b .project_text p, .project_c .project_text p {
   padding-bottom: 15px;
 }
 
-.project_b .project_utils, .project_c .project_utils {
-  display: flex;
-  gap: 10px;
-  justify-content: space-between;
-}
-
-.project_b .project_technologies, .project_c .project_technologies {
-  display: flex;
-  gap: 10px;
-}
-
-.project_b .project_technologies p, .project_c .project_technologies p {
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255);
-  color: black;
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
-}
-
-.project_b .project_links, .project_c .project_links {
-  border-radius: 10px;
-  background-color: rgb(126, 216, 103);
-  color: black;
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
-}
-
 .illustrations {
-  padding: 3rem;
-  padding-top: 6rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 6rem;
   height: auto;
 }
 .illustrations .top{
