--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -111,27 +111,14 @@
 }
 
 .slider {
+  z-index: 0;
   white-space: nowrap;
   background: linear-gradient(#4137cf, #0f0f0f);
 }
 
-.slider:before,
-.slider:after {
-  position: absolute;
-  content: "";
-  z-index: 2;
-}
-
-.slide:before {
-  left: 0;
-}
-
-.slider:after {
-  right: 0;
-}
-
 .slide {
   display: inline-block;
+  position: relative;
   animation: 25s slide infinite linear;
 }
 
@@ -195,13 +182,13 @@
 }
 
 .experiences h1{
-  font-size: 35px;
+  font-size: 25px;
   padding: 0.5rem;
   font-family: 'Chillax-Extralight' !important;
 }
 
 .resume_item_holder {
-  font-size: 20px;
+  font-size: 18px;
   margin: 1rem;
 }
 
