--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,20 +3,12 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: #0f0f0f;
-  /*padding: 2rem;*/
 }
 
 .home {
-  padding: 5rem;
+  padding: 3.2rem;
   background-color: #4137cf;
-  /*background: linear-gradient(5deg, #FFBC42, #3A2EE2);*/
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  height: 57vh;
-}
-
-.home svg {
-  font-size: 40px;
+  height: auto;
 }
 
 @keyframes gradient {
@@ -36,33 +28,34 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  padding-top: 1rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
 }
 
 .hero_text{
   display: flex;
-  flex-grow: 1;
+  flex-grow: 2;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 60%;
-  padding: 1rem;
-  padding-left: 15rem;
+  width: 55%;
+  padding-top: 5%;
+  padding-left: 20%;
 }
 
 .hero_title {
+  line-height: 80px;
   font-size: 50px;
 }
 
 .typewriter {
-  /* color:black; */
   color: orange;
 }
 
 .hero_info {
   text-align: left;
-  font-size: 25px;
-  padding-left: 3%;
-  padding-right: 20%;
+  font-size: 22px;
+  padding: 1rem;
+  padding-right: 21%;
   height: auto;
 }
 
@@ -72,7 +65,7 @@
 }
 
 .hero_image{
-  flex-grow: 5;
+  flex-grow: 3;
 }
 
 .hero_image_src {
