--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,6 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-
   mix-blend-mode: difference;
 }
 
@@ -210,8 +209,8 @@ body {
 
 .menu-items {
   font-family: 'Chillax-Medium' !important;
-  font-size: 120px;
-  line-height: 120px;
+  font-size: 100px;
+  line-height: 90px;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -226,51 +225,15 @@ body {
 	transition: all 300ms ease;
 }
 
-.menu-items a {
-  box-shadow: inset 0 0 0 0 #54b3d6;
-  color: #ffff;
-  padding: 0 .55rem;
-  margin: 0 -.55rem;
-  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+.menu-items a:hover:before {
+  transform: scale(1.2);
+  filter: blur(3px);
 }
+
 .menu-items a:hover {
-  color: #fff;
-  box-shadow: inset 1000px 0 0 0 orange;
-}
-
-.social-links {
-	position: fixed;
-	right: 0;
-	top: 50%; 
-	padding: 1em 0.5em 1em 1em;
-	background: #fafafa;
-	border-radius: 0.5em 0 0 0.5em;
-	box-shadow: -4px 0px 0px rgb(70, 40, 202);;
-	transition: all 300ms ease;
-}
-
-.social-links:hover {
-	box-shadow: -8px 0px 20px rgb(70, 40, 202);;
-	padding: 1em;
-}
-
-.links-list {
-	list-style: none;
-	display: flex;
-	flex-direction: column;
-	gap: 1em;
-}
-.social-link a {
-	color: #0f0f0f;
-	font-size: 1.5rem;
-	transition: all 200ms ease;
-}
-.social-link a:visited {
-	color: #0f0f0f;
-}
-.social-link a:hover {
-	color: rgb(70, 40, 202);;
-	font-size: 1.75rem;
+  color: #ffa502;
+  text-shadow: 0 0 15px #d35400;
+  transform: scale(1.2);
 }
 
 a {
@@ -300,6 +263,15 @@ a {
   justify-content: center;
   gap: 10px;
   padding: 5px;
+}
+
+.socials a{
+  transition: all .2s ease-in-out;
+}
+
+.socials a:hover {
+  transform: scale(1.35);
+  color: #ffa502;
 }
 
 .socials svg{
