--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -59,9 +59,18 @@
   height: auto;
 }
 
+.hero_info a {
+  padding: 10px;
+}
+
 .hero_info svg {
   height: 4rem;
   width: 3rem;
+  transition: all .2s ease-in-out;
+}
+
+.hero_info svg:hover {
+  transform: scale(1.35);
 }
 
 .hero_image{
@@ -379,6 +388,7 @@
   display: flex;
   gap: 10px;
   justify-content: space-between;
+  align-items: center;
 }
 
 .project_technologies {
@@ -393,22 +403,42 @@
   border-radius: 20px;
   background-color: rgba(255, 255, 255);
   color: black;
+  height: 25px;
 
   padding-left: 0.7rem;
   padding-right: 0.7rem;
 }
 
 .project_links{
-  border-radius: 5px;
-  background: #111;
+  width: 120px;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
   cursor: pointer;
+  margin: 20px;
+  height: auto;
+  text-align:center;
+  border: none;
+  background-size: 300% 100%;
+  border-radius: 5px;
+  background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+  box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+  cursor: pointer;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 
-.project_links a{
-  font-size: 15px;
-  background: #111;
-  color: black;
-  color: #fff;
+.project_links:hover {
+  background-position: 100% 0;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.project_links:focus {
+  outline: none;
 }
 
 .illustrations {
@@ -476,22 +506,36 @@
   padding: 6rem;
   background-color: aliceblue;
   color: #191a1d;
-}
-
-.side_title {
-  color: black;
-  -webkit-text-fill-color: aliceblue; /* Will override color (regardless of order) */
-  -webkit-text-stroke: 3px black;
-}
-
-.contact h2 {
-  padding-bottom: 1rem;
+  transition: 0.5s;
 }
 
 .contact h1 {
   font-family: 'Chillax-Semibold' !important;
   font-size: 100px;
   line-height: 75px;
+  z-index: 5;
+}
+
+.contact:before {
+  background: #d35400;
+  transition: .5s;
+}
+
+
+.contact:hover:before {
+  box-shadow: 0 0 15px #d35400;
+  filter: blur(3px);
+}
+
+
+.contact:hover {
+  color: #ffa502;
+  box-shadow: 0 0 15px #d35400;
+  text-shadow: 0 0 15px #d35400;
+}
+
+.contact h2 {
+  padding-bottom: 1rem;
 }
 
 .circles{
@@ -508,9 +552,10 @@
   list-style: none;
   width: 20px;
   height: 20px;
-  background: #13151d;
+  background: #13151d5b;
   animation: animate 12s linear infinite;
   bottom: -150px;
+  z-index: 0;
   
 }
 
@@ -524,16 +569,16 @@
 
 .circles li:nth-child(2){
   left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   animation-delay: 2s;
   animation-duration: 12s;
 }
 
 .circles li:nth-child(3){
   left: 70%;
-  width: 20px;
-  height: 20px;
+  width: 45px;
+  height: 45px;
   animation-delay: 4s;
 }
 
@@ -547,8 +592,8 @@
 
 .circles li:nth-child(5){
   left: 65%;
-  width: 20px;
-  height: 20px;
+  width: 35px;
+  height: 35px;
   animation-delay: 0s;
 }
 
@@ -576,8 +621,8 @@
 
 .circles li:nth-child(9){
   left: 20%;
-  width: 15px;
-  height: 15px;
+  width: 65px;
+  height: 65px;
   animation-delay: 2s;
   animation-duration: 35s;
 }
@@ -595,15 +640,21 @@
   0%{
       transform: translateY(-300px) rotate(0deg);
       opacity: 1;
-      border-radius: 30%;
+      border-radius: 35%;
   }
 
   100%{
       transform: translateY(-600px) rotate(720deg);
       opacity: 0;
-      border-radius: 70%;
+      border-radius: 75%;
   }
 
+}
+
+.side_title {
+  color: black;
+  -webkit-text-fill-color: aliceblue; /* Will override color (regardless of order) */
+  -webkit-text-stroke: 3px black;
 }
 
 /* Enable hover only on non-touch devices */
