Updated /illustrations and added hover animations to the drawings

--- a/src/app/illustrations/page.module.css
+++ b/src/app/illustrations/page.module.css
@@ -52,6 +52,14 @@
   flex-wrap: wrap;
 }
 
+.drawing img {
+  transition: 0.5s;
+}
+
+.drawing img:hover {
+  transform: scale(1.025);
+}
+
 .info {
   display: flex;
   flex-direction: column;
