--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,66 +1,57 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background-color: #13151d;
 }
 
 .home {
-  padding: 3.2rem;
   background-color: #4137cf;
   height: auto;
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
 .about {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  padding: 2rem;
   justify-content: center;
-  flex-wrap: wrap;
-  padding-top: 2rem;
-  padding-bottom: 4rem;
+  align-items: center;
 }
 
 .hero_text{
   display: flex;
-  flex-grow: 2;
+  align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
-  width: 55%;
-  padding-top: 5%;
-  padding-left: 20%;
 }
 
 .hero_title {
-  line-height: 80px;
+  line-height: 70px;
   font-size: 50px;
 }
 
 .typewriter {
   color: orange;
+  width: 135px;
+  text-align: left;
 }
 
 .hero_info {
-  text-align: left;
-  font-size: 22px;
+  text-align: center;
+  font-size: 25px;
+  width: 80%;
   padding: 1rem;
-  padding-right: 21%;
-  height: auto;
+}
+
+.hero_info > .introduction{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+}
+
+.hero_info > p {
+  width: 100%;
 }
 
 .hero_info a {
-  padding: 10px;
+  padding: 8px;
 }
 
 .hero_info svg {
@@ -73,21 +64,17 @@
   transform: scale(1.35);
 }
 
-.hero_image{
-  flex-grow: 3;
-}
-
-.hero_image_src {
-  background: url(../app/img/mork.png);
+.hero_image {
+  margin: 1rem;
+  background: url(../app/img/bachelorsdegree.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow:  inset 0 0 0 9px rgba(22, 19, 187, 0.3);
-  order: 1;
-  justify-self: center;
   width: 350px;
   height: 350px;
   animation: profile__animate 8s ease-in-out infinite 1s;
 }
+
 
 @keyframes profile__animate {
   0% {
@@ -122,6 +109,37 @@
   display: inline-block;
   position: relative;
   animation: 25s slide infinite linear;
+}
+
+.noise_slider{
+  position: absolute;
+  inset: 5%;
+  background-image: url(../app/assets/noise.png);
+  opacity: 15%;
+  z-index: 1;
+  pointer-events: none;
+
+  animation: shift 0.2s linear infinite both;
+}
+
+@keyframes shift {
+  0% {
+      transform: translateX(10%) translateY(10%);
+  }
+
+  100% {
+      transform: translateX(-10%) translateY(-10%);
+  }
+}
+
+@keyframes shift {
+  0% {
+      transform: translateX(10%) translateY(10%);
+  }
+
+  100% {
+      transform: translateX(-10%) translateY(-10%);
+  }
 }
 
 .services {
