--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -297,17 +297,36 @@ a {
   width: 3rem;
 }
 
-.inner-cursor {
-  position: fixed;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  mix-blend-mode: difference;
-  border-radius: 50%;
-  pointer-events: none;
-  transition: width 0.5s, height 0.5s;
+/* Tablet and Smaller Desktop */
+@media only screen and (max-width: 600px) {
+  .menu-items {
+    font-family: 'Chillax-Medium' !important;
+    font-size: 55px;
+    line-height: 65px;
+    padding: 8rem;
+  }
+
+  .made_by {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  
+    padding: 2rem;
+    color: white;
+    background-color: #13151d;
+  }
+  
+  .made_by_me > p {
+    font-size: 15px;
+  }
+
+  .back_to_top > a {
+    font-size: 15px;
+    color: #fff;
+    transition: 0.2s;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
