--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #0f0f0f;
+  background-color: #13151d;
 }
 
 .alert {
