--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,22 +3,32 @@
 }
 
 .home {
-  background-color: #4137cf;
+  background-color: #13151d;
   height: auto;
 }
 
 .about {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+}
+
+.hero_background {
+  position: relative;
+  z-index: 0;
+  opacity: 0.75;
 }
 
 .hero_text{
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-weight: bold;
 }
 
 .hero_title {
@@ -51,7 +61,7 @@
 }
 
 .hero_info a {
-  padding: 8px;
+  padding: 10px;
 }
 
 .hero_info svg {
@@ -90,51 +100,9 @@
   }
 }
 
-@keyframes slide {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-.slider {
-  z-index: 0;
-  white-space: nowrap;
-  background: linear-gradient(#4137cf, #13151d);
-}
-
-.slide {
-  display: inline-block;
-  position: relative;
-  animation: 25s slide infinite linear;
-  opacity: 0.5;
-}
-
-@keyframes shift {
-  0% {
-      transform: translateX(10%) translateY(10%);
-  }
-
-  100% {
-      transform: translateX(-10%) translateY(-10%);
-  }
-}
-
-@keyframes shift {
-  0% {
-      transform: translateX(10%) translateY(10%);
-  }
-
-  100% {
-      transform: translateX(-10%) translateY(-10%);
-  }
-}
-
 .services {
   text-align: center;
-  padding: 10rem;
+  padding: 12rem;
 }
 
 .services div {
@@ -200,8 +168,6 @@
 
 .experiences {
   padding: 6rem;
-  padding-top: 18rem;
-  padding-bottom: 18rem;
 }
 
 .experiences h1{
@@ -243,6 +209,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.job_organization img, .school_organization img {
+  width: 100px;
+  height: 100px;
+  border-radius: 30px;
 }
 
 .card_holder .job_organization div, .card_holder ul, .card_holder .school_organization div, .card_holder .project_technologies{
@@ -437,17 +409,13 @@
 .illustrations .top{
   padding: 1rem;
   font-family: 'Chillax-Extralight' !important;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  text-align: center;
+  align-content: center;
 }
 
 .illustrations .top h1 {
-  font-size: 25px;
-}
-
-.illustrations .top a {
-  font-size: 20px;
+  font-size: 35px;
   text-decoration-line: underline;
 }
 
@@ -567,103 +535,10 @@
   -webkit-text-stroke: 3px black;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-    border-radius: 45;
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-    border-radius: 45;
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-    border-radius: 45;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
 /* Tablet and Smaller Desktop */
 @media only screen and (max-width: 600px) {
-  .home {
-    padding-top: 3rem;
-  }
-
-  .hero_text{
-    padding: 0.5rem;
+  .about {
+    margin-top: 2rem;
   }
   
   .hero_title {
@@ -675,8 +550,8 @@
   }
 
   .hero_image {
-    width: 305px;
-    height: 305px;
+    width: 250px;
+    height: 250px;
   }
 
   .hero_info > .introduction{
@@ -685,46 +560,46 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    line-height: 30px;
+    margin-bottom: 10px;
   }
   
   .services {
     text-align: center;
     padding: 2rem;
-    padding-top: 8rem;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
   }
 
-  .services div {
-    line-height: 70px;
+  .services div { /* Years */
+    line-height: 45px;
   }
   
   .service_title {
-    flex-direction: row;
-    padding: 10px;
+    flex-direction: column;
+    padding: 5px;
   }
 
-  .service_title div {
+  .service_title div { /* Years */
     border-radius: 35px;
-    width: 110px;
-    height: 70px;
-    font-size: 70px;
+    width: 80px;
+    height: 45px;
+    font-size: 50px;
   }  
 
   .services h1 {
     font-family: 'Chillax-Semibold' !important;
-    font-size: 50px;
-    padding-left: 1.5rem;
-    line-height: 60px;
+    font-size: 40px;
+    line-height: 50px;
+    padding-left: 0px;
   }
 
   .experiences {
-    padding: 1rem;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding: 0.5rem;
   }
   
   .experiences h1{
-    font-size: 30px;
+    font-size: 25px;
   }
   
   .experience_holder {
@@ -733,7 +608,7 @@
   }
   
   .jobs_holder {
-    padding: 10px;
+    padding: 20px;
     width: auto;
     display: flex;
     flex-direction: column;
@@ -741,14 +616,19 @@
   }
   
   .card_holder {
-    font-size: 18px;
+    font-size: 15px;
     padding: 30px;
     width: 100%;
     height: auto;
   }
   
   .card_holder .job_organization div, .card_holder ul, .card_holder .school_organization div, .card_holder .project_technologies{
-    padding: 20px;
+    padding: 10px;
+  }
+
+  .school_organization img{
+    height: 75px;
+    width: 75px;
   }
 
   .project_technologies {
@@ -756,11 +636,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: auto;
+    font-size: 15px;
   }
   
   .card_holder > p {
-    font-size: 20px;
+    font-size: 18px;
     padding: 10px;
+  }
+
+  .illustrations .top h1 {
+    text-align: center;
+    align-items: center;
+    align-self: center;
+    font-size: 25px;
   }
 
   .drawings {
@@ -771,13 +659,21 @@
     justify-content: center;
   }
 
+  .drawings .info_text h1 {
+    font-size: 22px;
+  }
+
+  .drawings .info_type p {
+    font-size: 15px;
+  }
+
   .drawing img {
-    height: 370px;
+    height: 330px;
   }
 
   .contact {
     text-align: center;
-    padding: 5rem;
+    padding: 3.5rem;
     background-color: aliceblue;
     color: #191a1d;
     transition: 0.5s;
@@ -785,8 +681,8 @@
   
   .contact h1 {
     font-family: 'Chillax-Semibold' !important;
-    font-size: 45px;
-    line-height: 45px;
+    font-size: 40px;
+    line-height: 40px;
     z-index: 5;
   }
   
@@ -881,11 +777,7 @@
   }
   
   .project_technologies {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    width: 70%;
+    width: 100%;
   }
   
   .project_technologies p {
